fixed bug where animations werent preserving original vehicle colour

--- a/html/Client/BusGame_Game.html
+++ b/html/Client/BusGame_Game.html
@@ -1,9 +1,9 @@
 
 <div id="top" class="lane">
     <div class="inner">
-        <div class="vehicle car"><img src="<%- Top.Car %>"></div>
+        <div class="vehicle car"><img src="<%= Top.Car.Frames[Top.Car.Current].src  %>"></div>
         <div class="vehicle bus">
-            <img src="<%- Top.Bus %>">
+            <img src="<%= Top.Bus.Frames[Top.Bus.Current].src %>">
             <div class="windows">
                 <div class="window hidden first"><%= Top.Windows[0] %></div>
                 <div class="window hidden"><%= Top.Windows[1] %></div>
@@ -15,13 +15,13 @@
 <div id="bottom" class="lane">
     <div class="inner">
         <div class="vehicle bus">
-            <img src="<%- Bottom.Bus %>">
+            <img src="<%= Bottom.Bus.Frames[Bottom.Bus.Current].src %>">
             <div class="windows">
                 <div class="window hidden"><%= Bottom.Windows[0] %></div>
                 <div class="window hidden"><%= Bottom.Windows[1] %></div>
                 <div class="window hidden last"><%= Bottom.Windows[2] %></div>
             </div>
         </div>
-        <div class="vehicle car"><img src="<%- Bottom.Car %>"></div>
+        <div class="vehicle car"><img src="<%= Bottom.Car.Frames[Bottom.Car.Current].src %>"></div>
     </div>
 </div>
