Another stylign pass from susan

--- a/html/Client/Header.html
+++ b/html/Client/Header.html
@@ -2,7 +2,7 @@
 	<a href="./Stories"><span lang='en'><img id="logo" src="../../img/icons/NavBar/WAY_logo.svg"></span></a>
 </div>
 <nav>    
-	<div class=""><a href="./Stories"><button class="nav-icon" id="nav-stories-icon"></button></a></div>
+	<div class="" id="nav-stories-div"><a href="./Stories"><button class="nav-icon" id="nav-stories-icon"></button></a></div>
 	<!--<div class=""><a href="./Games"><button class="nav-icon" id="nav-games-icon"></button></a></div>-->
 	<div class="" id="nav-user">
         
