mode storyviewer changes

--- a/html/Client/StoryViewer.html
+++ b/html/Client/StoryViewer.html
@@ -1,14 +1,12 @@
 <div id="story-viewer">
 	<div id="page-counter">
-		<div id="page-counter-background">
-			<span id="current"><%- currentPageNumber %></span>
-			<span id="total"><%- totalPages %></span>
-		</div>
+		<span id="current"><%- currentPageNumber %></span>
+		<span id="total"><%- totalPages %></span>
 	</div>
 	<div id="page-content">
 	</div>
 	<div id="page-controller">
 
 	</div>
-	<button id="toggle-fullscreen"></button>
+	<button id="fullscreen-toggle"></button>
 </div>
