--- a/html/Client/Viewer.html
+++ b/html/Client/Viewer.html
@@ -1,5 +1,5 @@
 <div id="viewer">
-	<div id="exit-fullscreen"></div>
+	<!-- <div id="exit-fullscreen"></div>
 	<div id="holder">
 		<span id="current">2</span>
 		<span id="total">10</span>
@@ -39,7 +39,7 @@
 				<span class="num">3</span>
 			</button>
 		</div>
-	</div>
+	</div> -->
 </div>
 <!-- <div id="viewerBar">
 	<div id="index">
