finished backend linking with story viewer

--- a/html/Client/StoryViewer.html
+++ b/html/Client/StoryViewer.html
@@ -1,12 +1,11 @@
 <div id="story-viewer">
 	<div id="page-counter">
-		<span id="current"><%- currentPageNumber %></span>
-		<span id="total"><%- totalPages %></span>
+		<span id="current">1</span>
+		<span id="total"><%- Object.keys(story.data).length + 1 %></span>
 	</div>
 	<div id="page-content">
 	</div>
 	<div id="page-controller">
-
 	</div>
 	<button id="fullscreen-toggle"></button>
 </div>
