--- a/html/Client/Viewer.html
+++ b/html/Client/Viewer.html
@@ -1,81 +1,8 @@
 <div id="viewer">
-	<!-- <div id="exit-fullscreen"></div>
-	<div id="holder">
-		<span id="current">2</span>
-		<span id="total">10</span>
-	</div>
-	<div id="viewer-content">
-		<div class="viewerNav" id="back">
-			<button>
-				<img id="btn" src="../../img/icons/General/icon_Page_Back.svg">
-				<img class="icon" id="sign" src="../../img/icons/StoryViewer/icon_SV_Page_SignLang.svg">
-				<img class="icon" id="cover" src="../../img/icons/StoryViewer/icon_SV_Page_Image.svg">
-				<span class="num">1</span>
-			</button>
-		</div>
-		<div class="content">
-			<div id="currentOverlay">
-				<img src="../../img/icons/StoryViewer/icon_SV_CoverImage.svg">
-				<span>2</span>
-			</div>
-			<div id="visuals">
-				<video id="primeVid" src="" controls></video>
-				<img src="">
-			</div>
-			<div id="storyToggle">
-				<button>
-					<img id="hide" src="../../img/icons/StoryViewer/icon_SV_ShowText.svg">
-					<img id="show" src="../../img/icons/StoryViewer/icon_SV_HideText.svg">
-				</button>
-			</div>
-			<div id="story">
-			</div>
-		</div>
-		<div class="viewerNav" id="forward">
-			<button>
-				<img id="btn" src="../../img/icons/General/icon_Page_Next.svg">
-				<img class="icon" id="sign" src="../../img/icons/StoryViewer/icon_SV_Page_SignLang.svg">
-				<img class="icon" id="cover" src="../../img/icons/StoryViewer/icon_SV_Page_Image.svg">
-				<span class="num">3</span>
-			</button>
-		</div>
-	</div> -->
-</div>
-<!-- <div id="viewerBar">
-	<div id="index">
-	</div>
-	<div id="optionBtns">
-		<div id="fullscreen">
-			<button>
-			</button>
-		</div>
-	</div>
-</div> -->
-<div id="id01" class="modal">
-	<form class="modal-content animate" action="/action_page.php">
-		<div class="container">
-			<div id="exit-modal"></div>
-			<div id="mediaContainer">
-				<div class="media">
-					<video id="videoContainer" autoplay muted src="">
-					</video>
-				</div>
-				<div id="mediaImage">
-					<img id="definitionImage">
-				</div>
-			</div>
-			<div id=definitionContainer>
-				<h1 id="definitionWord"> Test</h1>
-				<p id="definitionText">
-					The definition of test is a value used to see if it is working correctly.
-				</p>
-			</div>
-		</div>
-	</form>
 </div>
 <div id="details">
 	<div id="title">
-		<% _.each(story.metadata.title, (title, lang) => { %>
+		<% _.each(story.metadata.title, function(title, lang){ %>
 			<span lang="<%- lang %>"><%- title %></span>
 		<% }) %>
 	</div>
@@ -87,23 +14,23 @@
 		<button id="social-share" class="social socialExport">Share</button>
 	</div>
 	<div id="description">
-		<% _.each(story.metadata.description, (description, lang) => { %>
+		<% _.each(story.metadata.description, function(description, lang){ %>
 			<span lang="<%- lang %>"><%- description %></span>
 		<% }) %>
 	</div>
 	<div id="genres" class="metadata-list"> Genres:
-		<% _.each(story.metadata.genres, (genreList, lang) => { %>
+		<% _.each(story.metadata.genres, function(genreList, lang){ %>
 			<span lang="<%- lang %>">
-				<% _.each(genreList, (genre) => { %>
+				<% _.each(genreList, function(genre){ %>
 					<a class="genre" href="./Search?search=<%- genre %>"><%- genre %></a>
 				<% }) %>
 			</span>
 		<% }) %>
 	</div>
 	<div id="tags" class="metadata-list"> Tags:
-		<% _.each(story.metadata.tags, (tagList, lang) => { %>
+		<% _.each(story.metadata.tags, function(tagList, lang){ %>
 			<span lang="<%- lang %>">
-				<% _.each(tagList, (tag) => { %>
+				<% _.each(tagList, function(tag){ %>
 					<a class="tag" href="./Search?search=<%- tag %>">#<%- tag %></a>
 				<% }) %>
 			</span>
