Added checkmark animation

--- a/html/Client/BusGame_Header.html
+++ b/html/Client/BusGame_Header.html
@@ -2,4 +2,7 @@
     <button id="backBtn">
         <img src = "../../img/icons/General/icon_Page_Back.svg">
     </button>
+    <div id = "checkMark">
+<img id = "checkMarkImage">
+</div>
 </div>
