--- a/html/Client/Editor/EditGlossary.html
+++ b/html/Client/Editor/EditGlossary.html
@@ -23,7 +23,7 @@
 							</div>
 						<% });
 					} %>
-					<button id="term-add-button" class="add-text-button">+</button>
+					<button id="term-add-button" class="add-text-button"></button>
 				</div>
 			</div>
 			<% if(currentGlossaryTerm && currentGlossaryTerm != ''){ %>
