--- a/html/Client/Editor/Pages.html
+++ b/html/Client/Editor/Pages.html
@@ -4,12 +4,12 @@
 		<div class="quarter">
 			<div class="page-nav"></div>
 			<div id="pages-preview">
-				<div><button id="" class="add-page-button">+<br/>add page</button></div>
+				<div><button id="" class="add-page-button add-text-button"></button></div>
 			</div>
 			<div id="page-legend">
 				<div class="page-icon added"> = added</div>
 				<div class="page-icon missing"> = missing</div>
-				<div class="page-icon o-missing"> = missing: optional</div>
+				<div class="page-icon o-missing"> = missing / optional</div>
 			</div>
 		</div>
 		<div class="three-quarters">
