--- a/html/Client/Editor/Language.html
+++ b/html/Client/Editor/Language.html
@@ -8,7 +8,7 @@
 					<% if(storyWrittenLanguages.indexOf(language.name) != -1) return; %>
 					<div><button class="language-button story-language-button add-story-language add-button" lang-name="<%- language.name %>" lang-type="written" lang-fnc="add"><%- language.name %></button></div>
 				<% }) %>
-				<div><button class="language-button add-language add-text-button" lang-type="written">+</button></div>
+				<div><button class="language-button add-language add-text-button" lang-type="written"></button></div>
 			</div>
 			<div class="half selected-languages">
 				<div class="selected-title">Selected</div>
@@ -25,7 +25,7 @@
 					<% if(storySignLanguages.indexOf(language.name) != -1) return; %>
 					<div><button class="language-button story-language-button add-story-language add-button" lang-name="<%- language.name %>" lang-type="sign" lang-fnc="add"><%- language.name %></button></div>
 				<% }) %>
-				<div><button class="language-button add-language add-text-button" lang-type="sign">+</button></div>
+				<div><button class="language-button add-language add-text-button" lang-type="sign"></button></div>
 			</div>
 			<div class="half selected-languages">
 				<div class="selected-title">Selected</div>
