--- a/html/Client/Editor/Metadata.html
+++ b/html/Client/Editor/Metadata.html
@@ -26,7 +26,7 @@
 					<% _.each(metadata.genres[currentWrittenLanguage], function(genre){ %>
 						<div><button class="delete-button" data-type="genres"><%- genre %></button></div>
 					<% }); %>
-					<div><button id="add-genre" class="add-text-button" data-type="genres">+</button></div>
+					<div><button id="add-genre" class="add-text-button" data-type="genres"></button></div>
 				</div>
 			</div>
 			<div>
@@ -35,7 +35,7 @@
 					<% _.each(metadata.tags[currentWrittenLanguage], function(tag){ %>
 						<div><button class="delete-button" data-type="tags"><%- tag %></button></div>
 					<% }); %>
-					<div><button id="add-tag" class="add-text-button" data-type="tags">+</button></div>
+					<div><button id="add-tag" class="add-text-button" data-type="tags"></button></div>
 				</div>
 			</div>
 		</div>
