better window sizing

--- a/html/Client/BusGame_Game.html
+++ b/html/Client/BusGame_Game.html
@@ -1,7 +1,7 @@
 
 <div id="top" class="lane">
     <div class="inner">
-        <div class="vehicle car"><img src="<%= Top.Car.Frames[Top.Car.Current].src  %>"></div>
+        <div class="vehicle car"><img class="vImg" src="<%= Top.Car.Frames[Top.Car.Current].src  %>"></div>
         <div class="vehicle bus">
             <img class="vImg" src="<%= Top.Bus.Frames[Top.Bus.Current].src %>">
             <div class="windows">
@@ -40,6 +40,6 @@
                 </div>
             </div>
         </div>
-        <div class="vehicle car"><img src="<%= Bottom.Car.Frames[Bottom.Car.Current].src %>"></div>
+        <div class="vehicle car"><img class="vImg" src="<%= Bottom.Car.Frames[Bottom.Car.Current].src %>"></div>
     </div>
 </div>
