made header btns use proper bg and icons, started styling pass

--- a/html/Client/BusGame_Header.html
+++ b/html/Client/BusGame_Header.html
@@ -1,6 +1,6 @@
 <div>
     <button id="backBtn">
-        <img src = "../../img/icons/General/icon_Page_Back.svg">
+        <img src = "../../img/games/BusGame/Menu/arrow_BusGame.png">
     </button>
     <div id = "checkMark">
 <img id = "checkMarkImage">
