--- a/html/Client/CustomSelect.html
+++ b/html/Client/CustomSelect.html
@@ -1,12 +1,13 @@
+<% defaultText = defaultText ? defaultText : (multiSelect ? '' : (typeof options[0] == 'string' ? options[0] : options[0].label)) %>
 <div id="<%- id %>" class="custom-select">
 	<button class="custom-select-value"><%- defaultText %></button>
 	<div class="custom-select-options">
 		<% _.each(options, function(option){ %>
 			<div>
 				<% if(multiSelect){  %>
-					<input type="check" value="<%- option %>"><label><%- option %></label>
+					<input type="check" value="<%- typeof option == 'string' ? option : option.value %>"><label><%- typeof option == 'string' ? option : option.label %></label>
 				<% } else { %>
-					<button value="<%- option %>"><%- option %></button>
+					<button value="<%- typeof option == 'string' ? option : option.value %>"><%- typeof option == 'string' ? option : option.label %></button>
 				<% } %>
 			</div>
 		<% }) %>
