--- a/html/Client/StoryPreview.html
+++ b/html/Client/StoryPreview.html
@@ -1,11 +1,10 @@
 <div id="<%- id %>" class="story-preview">
-	<a href="./<%- launchToEditor ? 'Editor' : 'View' %>?id=<%- story.id %>">
-		<div class="cover-image-container" style="background-image: url(<%- story.coverimage %>)">
-			<button class="info-button">i</button>
-		</div>
+	<div class="cover-image-container" style="background-image: url(<%- story.coverimage %>)">
+		<button class="info-button">i</button>
+	</div>
 
-		<div class="meta-data-container">
-			<div class="story-game-button" onclick="event.preventDefault(); window.open('./Games', '_self'); "></div>
+	<div class="meta-data-container">
+		<a href="./<%- launchToEditor ? 'Editor' : 'View' %>?id=<%- story.id %>">
 			<% _.each(story.metadata.title, function(title, lang){ %>
 				<div class="title" lang="<%- lang %>"><%- title %></div>
 			<% }) %>
@@ -13,6 +12,7 @@
 			<% _.each(story.metadata.description, function(description, lang){ %>
 				<div class="description" lang="<%- lang %>"><%- description %></div>
 			<% }) %>
-		</div>
-	</a>
+		</a>
+		<a class="story-game-button" href="./Games?storyId=<%- story.id %>"></a>
+	</div>
 </div>
