IE star area covering eveyrthing bug fix

--- a/html/Client/BusGame_Game.html
+++ b/html/Client/BusGame_Game.html
@@ -8,17 +8,17 @@
                 <div class="window hidden first">
                     <img class="glass" src = "../../img/games/BusGame/WindowAnimation/Frames/Window%20Animation_00000.png">
                     <%= Top.Windows[0] %>
-                    <img class="star" src = "">
+                    <img class="star hidden" src = "">
                 </div>
                 <div class="window hidden">
                     <img class="glass" src = "../../img/games/BusGame/WindowAnimation/Frames/Window%20Animation_00000.png">
                     <%= Top.Windows[1] %>
-                    <img class="star" src = "">
+                    <img class="star hidden" src = "">
                 </div>
                 <div class="window hidden">
                     <img class="glass" src = "../../img/games/BusGame/WindowAnimation/Frames/Window%20Animation_00000.png">
                     <%= Top.Windows[2] %>
-                    <img class="star" src = "">
+                    <img class="star hidden" src = "">
                 </div>
             </div>
         </div>
@@ -32,17 +32,17 @@
                 <div class="window hidden">
                     <img class="glass" src = "../../img/games/BusGame/WindowAnimation/Frames/Window%20Animation_00000.png">
                     <%= Bottom.Windows[0] %>
-                    <img class="star" src = "">
+                    <img class="star hidden" src = "">
                 </div>
                 <div class="window hidden">
                     <img class="glass" src = "../../img/games/BusGame/WindowAnimation/Frames/Window%20Animation_00000.png">
                     <%= Bottom.Windows[1] %>
-                    <img class="star" src = "">
+                    <img class="star hidden" src = "">
                 </div>
                 <div class="window hidden last">
                     <img class="glass" src = "../../img/games/BusGame/WindowAnimation/Frames/Window%20Animation_00000.png">
                     <%= Bottom.Windows[2] %>
-                    <img class="star" src ="">
+                    <img class="star hidden" src ="">
                 </div>
             </div>
         </div>
