progress towards offline, filterbar on edit page

--- a/html/Client/Stories.html
+++ b/html/Client/Stories.html
@@ -6,26 +6,31 @@
 <script src="../../upup.min.js"></script>
 <script>
 UpUp.start({
-  'content-url': '../../html/Client/ViewerOffline.html',
-  'assets': ['../../output-file.js',
-        '../../js/Client/ServiceWorkerDOM.js',
+  'content-url': './html/Client/ViewerOffline.html',
+  'assets': ['./js/Client/ServiceWorkerDOM.js',
+          './js/jquery-min.js',
+          './js/jqueryTest.js',
+          './js/jquery-ui.min.js',
+            './output-file1.js',
+        
 
-  			'../../js/jquery-ui.min.js',
-  			'../../img/icons/General/icon_Page_Back.svg',		
-  			'../../img/icons/StoryViewer/icon_SV_Page_SignLang.svg',		
-  			'../../img/icons/StoryViewer/icon_SV_Page_Image.svg',		
-  			'../../img/icons/StoryViewer/icon_SV_CoverImage.svg',		
-  			'../../img/icons/StoryViewer/icon_SV_HideText.svg',		
-  			'../../img/icons/General/icon_Page_Next.svg',		
-  			'../../img/icons/StoryViewer/icon_SV_WrittenLang.svg',		
-  			'../../img/icons/StoryViewer/icon_SV_SignLang.svg',		
-  			'../../img/icons/StoryViewer/icon_SV_Fullscreen.svg',		
-  			'../../img/icons/user.png',		
-  			'../../img/icons/SocialMedia/icon_SM_Views.svg',		
-  			'../../img/icons/SocialMedia/icon_SM_Likes.svg',		
-  			'../../img/icons/SocialMedia/icon_SM_Save.svg',		
-  			'../../img/icons/SocialMedia/icon_SM_Share.svg',		
-  			]
+
+  			'./img/icons/General/icon_Page_Back.svg',		
+  			'./img/icons/StoryViewer/icon_SV_Page_SignLang.svg',		
+  			'./img/icons/StoryViewer/icon_SV_Page_Image.svg',		
+  			'./img/icons/StoryViewer/icon_SV_CoverImage.svg',		
+  			'./img/icons/StoryViewer/icon_SV_HideText.svg',		
+  			'./img/icons/General/icon_Page_Next.svg',		
+  			'./img/icons/StoryViewer/icon_SV_WrittenLang.svg',		
+  			'./img/icons/StoryViewer/icon_SV_SignLang.svg',		
+  			'./img/icons/StoryViewer/icon_SV_Fullscreen.svg',		
+  			'./img/icons/user.png',		
+  			'./img/icons/SocialMedia/icon_SM_Views.svg',		
+  			'./img/icons/SocialMedia/icon_SM_Likes.svg',		
+  			'./img/icons/SocialMedia/icon_SM_Save.svg',		
+  			'./img/icons/SocialMedia/icon_SM_Share.svg',		
+  			],
+        'service-worker-url': './upup.sw.min.js'
 });
 </script>
 
