worksheet game html now fills with proper data tot he template (for round 1 atleast, havent tested for new rounds)

--- a/html/Client/PlantGame_Game.html
+++ b/html/Client/PlantGame_Game.html
@@ -2,16 +2,16 @@
     <div id="videoContainer">
 
         <div id="videoOne" class="media">
-            <video src="<%= Media[0] %>"></video>
-            <img src="<%= Star[0].src %>" >
+            <video id = "<%= ID[0].toString() + "Vid" %>" src="<%= Media[0] %>" autoplay muted loop></video>
+            <img src="<%= Star %>" >
         </div>
         <div id="videoTwo" class="media">
-            <video src="<%= Media[1] %>"></video>
-            <img src="<%= Star[0].src %>" >
+            <video id = "<%= ID[1].toString() + "Vid" %>" src="<%= Media[1] %>" autoplay muted loop></video>
+            <img src="<%= Star %>" >
         </div>
         <div id="videoThree" class="media">
-            <video src="<%= Media[2] %>"></video>
-            <img src="<%= Star[0].src %>" >
+            <video id = "<%= ID[2].toString() + "Vid" %>" src="<%= Media[2] %>" autoplay muted loop></video>
+            <img src="<%= Star %>" >
         </div>
 
     </div>
