drag and drop base functionality

--- a/html/Client/PlantGame_Game.html
+++ b/html/Client/PlantGame_Game.html
@@ -3,15 +3,15 @@
 
         <div id="videoOne" class="media">
             <video id = "<%= ID[0].toString() + "Vid" %>" src="<%= Media[0] %>" autoplay muted loop></video>
-            <img src="<%= Star %>" >
+            <img class = "hidden" src="<%= Star %>" >
         </div>
         <div id="videoTwo" class="media">
             <video id = "<%= ID[1].toString() + "Vid" %>" src="<%= Media[1] %>" autoplay muted loop></video>
-            <img src="<%= Star %>" >
+            <img class = "hidden" src="<%= Star %>" >
         </div>
         <div id="videoThree" class="media">
             <video id = "<%= ID[2].toString() + "Vid" %>" src="<%= Media[2] %>" autoplay muted loop></video>
-            <img src="<%= Star %>" >
+            <img class = "hidden" src="<%= Star %>" >
         </div>
 
     </div>
@@ -22,7 +22,7 @@
 
 <div id="sentence">
     <span id = "begining"><%- Text[0] %></span>
-    <span id = "blank"></span>
+    <span id = "blank">________</span>
     <span id= "end"><%- Text[1] %></span>
 </div>
 
