hint button functionality, scoring according to desing doc, and star nimates on correct awnser

--- a/html/Client/PlantGame_Game.html
+++ b/html/Client/PlantGame_Game.html
@@ -17,7 +17,7 @@
     </div>
 </div>
 <div id = "hintBtnContainer">
-<button id = "hint"></button>
+<button id = "hint">Hint</button>
 </div>
 
 <div id="sentence">
