dragging and blank styling QoL update

--- a/html/Client/PlantGame_Game.html
+++ b/html/Client/PlantGame_Game.html
@@ -22,7 +22,7 @@
 
 <div id="sentence">
     <span id = "begining"><%- Text[0] %></span>
-    <span id = "blank">________</span>
+    <span id = "blank">______</span>
     <span id= "end"><%- Text[1] %></span>
 </div>
 
