offline progress displaying the story

--- a/html/Client/Stories.html
+++ b/html/Client/Stories.html
@@ -6,29 +6,38 @@
 <script src="../../upup.min.js"></script>
 <script>
 UpUp.start({
-  'content-url': './html/Client/ViewerOffline.html',
-  'assets': ['./js/Client/ServiceWorkerDOM.js',
-          './js/jquery-min.js',
-          './js/jqueryTest.js',
-          './js/jquery-ui.min.js',
-            './output-file1.js',
-        
-
-
-  			'./img/icons/General/icon_Page_Back.svg',		
-  			'./img/icons/StoryViewer/icon_SV_Page_SignLang.svg',		
-  			'./img/icons/StoryViewer/icon_SV_Page_Image.svg',		
-  			'./img/icons/StoryViewer/icon_SV_CoverImage.svg',		
-  			'./img/icons/StoryViewer/icon_SV_HideText.svg',		
-  			'./img/icons/General/icon_Page_Next.svg',		
-  			'./img/icons/StoryViewer/icon_SV_WrittenLang.svg',		
-  			'./img/icons/StoryViewer/icon_SV_SignLang.svg',		
-  			'./img/icons/StoryViewer/icon_SV_Fullscreen.svg',		
-  			'./img/icons/user.png',		
-  			'./img/icons/SocialMedia/icon_SM_Views.svg',		
-  			'./img/icons/SocialMedia/icon_SM_Likes.svg',		
-  			'./img/icons/SocialMedia/icon_SM_Save.svg',		
-  			'./img/icons/SocialMedia/icon_SM_Share.svg',		
+  'content-url': './../../html/Client/ViewerOffline.html',
+  'assets': [	 './img/icons/General/icon_Page_Back.svg',
+    './static/jquery-min.js',
+          '/static/jquery-ui.min.js',
+          '/upup.sw.min.js',
+          '/upup.min.js',
+          '/img/icons/StoryViewer/icon_SV_Page_Image.svg',
+          '/img/icons/StoryViewer/icon_SV_CoverImage.svg',   
+          '/img/icons/StoryViewer/icon_SV_HideText.svg',   
+          '/img/icons/General/icon_Page_Next.svg',   
+          '/img/icons/StoryViewer/icon_SV_WrittenLang.svg',    
+          '/img/icons/StoryViewer/icon_SV_SignLang.svg',   
+          '/img/icons/StoryViewer/icon_SV_Fullscreen.svg',   
+          '/img/icons/user.png',   
+          '/img/icons/SocialMedia/icon_SM_Views.svg',    
+          '/img/icons/SocialMedia/icon_SM_Likes.svg',    
+          '/img/icons/SocialMedia/icon_SM_Save.svg',
+          '/img/icons/SocialMedia/icon_SM_Share.svg', 
+          '/img/icons/StoryViewer/icon_SV_Page_SignLang.svg',   
+          '/img/icons/StoryViewer/icon_SV_ShowText.svg',
+          '/img/icons/StoryViewer/icon_SV_ShowText_HoverDown.svg',
+          '/output-file2.js',
+          '/img/icons/General/icon_Close.svg',
+          '/img/icons/General/icon_Globe_White.svg',
+          '/style/viewer.css',
+          '/img/icons/StoryViewer/bkgd_pageCounter.svg',
+          '/img/icons/General/icon_WrittenLang_White.svg',
+          '/img/icons/General/icon_DropDnArrow.svg',
+          '/img/icons/General/icon_SignLang_White.svg',
+          '/img/icons/StoryViewer/icon_SV_Page_Image_HoverDown.svg',
+          '/img/icons/StoryViewer/icon_SV_HideTex_HoverDown.svg',
+          '/uploads/ci-3.png'
   			],
         'service-worker-url': './upup.sw.min.js'
 });
@@ -45,5 +54,30 @@ UpUp.start({
         '../../js/Client/StoryPreview.js',
 
         '../../img/icons/StoryViewer/icon_SV_ShowText.svg',   
+
+
+'./js/Client/ServiceWorkerDOM.js',
+          './static/jquery-min.js',
+          './js/jqueryTest.js',
+          './static/jquery-ui.min.js',
+            './output-file1.js',
+        './../../img/icons/General/icon_Page_Back.svg',   
+        './../../img/icons/StoryViewer/icon_SV_Page_SignLang.svg',  
+
+        './img/icons/StoryViewer/icon_SV_Page_Image.svg',   
+        './img/icons/StoryViewer/icon_SV_CoverImage.svg',   
+        './img/icons/StoryViewer/icon_SV_HideText.svg',   
+        './img/icons/General/icon_Page_Next.svg',   
+        './img/icons/StoryViewer/icon_SV_WrittenLang.svg',    
+        './img/icons/StoryViewer/icon_SV_SignLang.svg',   
+        './img/icons/StoryViewer/icon_SV_Fullscreen.svg',   
+        './img/icons/user.png',   
+        './img/icons/SocialMedia/icon_SM_Views.svg',    
+        './img/icons/SocialMedia/icon_SM_Likes.svg',    
+        './img/icons/SocialMedia/icon_SM_Save.svg',   
+        './../../img/icons/SocialMedia/icon_SM_Share.svg',  
+
+          './img/icons/General/icon_Page_Back.svg',   
+
 
         -->
