--- a/html/Client/PlantGame_Game_FlowerBed.html
+++ b/html/Client/PlantGame_Game_FlowerBed.html
@@ -1,4 +1,5 @@
 <div id="flowerBed">
+    <img id = "bird" src = "">
     <img id ="wall" src = "../../img/games/Worksheet/WindyPlants_Animation/WindyPlants_00000.png">
     <div id = "flowers">
         <div class="flower hidden">
