Updated directions text for plant game

--- a/html/Client/PlantGame_Instructions.html
+++ b/html/Client/PlantGame_Instructions.html
@@ -1,7 +1,7 @@
 <div class = "title">
     <span>How to Play</span>
 </div>
-<div id = "pageContent"></div>
+<div id = "pageContent">Drag and drop the correct sign into the sentence.</div>
 <div class = "buttons">
     <div class = "centered">
         
