getting incorrect awnser on bus game now closes both windows (ie better "wrong" notifcation?)

--- a/html/Client/Games/BusGame/Game.html
+++ b/html/Client/Games/BusGame/Game.html
@@ -6,17 +6,17 @@
             <img class="vImg" src="<%= Top.Bus.Frames[Top.Bus.Current].src %>">
             <div class="windows">
                 <div class="window hidden first">
-                    <img class="glass" src = "../../img/games/BusGame/WindowAnimation/Frames/Window%20Animation_00000.png">
+                    <img class="glass Up" src = "../../img/games/BusGame/WindowAnimation/Frames/Window%20Animation_00000.png">
                     <%= Top.Windows[0] %>
                     <img class="star hidden" src = "">
                 </div>
                 <div class="window hidden">
-                    <img class="glass" src = "../../img/games/BusGame/WindowAnimation/Frames/Window%20Animation_00000.png">
+                    <img class="glass Up" src = "../../img/games/BusGame/WindowAnimation/Frames/Window%20Animation_00000.png">
                     <%= Top.Windows[1] %>
                     <img class="star hidden" src = "">
                 </div>
                 <div class="window hidden">
-                    <img class="glass" src = "../../img/games/BusGame/WindowAnimation/Frames/Window%20Animation_00000.png">
+                    <img class="glass Up" src = "../../img/games/BusGame/WindowAnimation/Frames/Window%20Animation_00000.png">
                     <%= Top.Windows[2] %>
                     <img class="star hidden" src = "">
                 </div>
@@ -30,17 +30,17 @@
             <img class="vImg" src="<%= Bottom.Bus.Frames[Bottom.Bus.Current].src %>">
             <div class="windows">
                 <div class="window hidden">
-                    <img class="glass" src = "../../img/games/BusGame/WindowAnimation/Frames/Window%20Animation_00000.png">
+                    <img class="glass Up" src = "../../img/games/BusGame/WindowAnimation/Frames/Window%20Animation_00000.png">
                     <%= Bottom.Windows[0] %>
                     <img class="star hidden" src = "">
                 </div>
                 <div class="window hidden">
-                    <img class="glass" src = "../../img/games/BusGame/WindowAnimation/Frames/Window%20Animation_00000.png">
+                    <img class="glass Up" src = "../../img/games/BusGame/WindowAnimation/Frames/Window%20Animation_00000.png">
                     <%= Bottom.Windows[1] %>
                     <img class="star hidden" src = "">
                 </div>
                 <div class="window hidden last">
-                    <img class="glass" src = "../../img/games/BusGame/WindowAnimation/Frames/Window%20Animation_00000.png">
+                    <img class="glass Up" src = "../../img/games/BusGame/WindowAnimation/Frames/Window%20Animation_00000.png">
                     <%= Bottom.Windows[2] %>
                     <img class="star hidden" src ="">
                 </div>
